# PoolCoder

./: README.md  pricing.toml  pyproject.toml
src/pool_coder/: __init__.py  aggregator.py  cli.py  config.py  discovery.py  engine.py  format.py  models.py  overview.py  parser.py  paths.py  pricing.py  snapshot.py  state.py  tailer.py  web.py
src/pool_coder/sources/: __init__.py  base.py  jsonl_source.py  plan_limits.py
src/pool_coder/ui/: __init__.py  app.py  render.py
tests/: test_aggregator.py  test_app.py  test_config.py  test_discovery.py  test_pricing.py  test_render.py  test_tailer.py  test_web.py
