[project]
name = "pool-coder"
version = "0.1.0"
description = "Realtime Claude Code session monitor — a terminal dashboard over ~/.claude/projects/*.jsonl"
readme = "README.md"
authors = [
    { name = "kkilictepe", email = "7527765+kkilictepe@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
pool-coder = "pool_coder.cli:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
